Ran the FINDBUGS quality program. Found some stuff, and modified so it there are no errors!