@@ -71,7 +71,8 @@ public class DBCDControl implements DBCtrl<CD> {
             String msg = ex.getLocalizedMessage();
             if (msg == null || msg.length() == 0) {
 
-                Long id = new Long((long) t.getId());
+//                Long id = new Long((long) t.getId());
+                Long id = Long.valueOf(t.getId());
 
                 if (findEntity(id) == null) {
                     throw new NoSuchElementException();
